# RPi-remote-power-control

./: .gitignore  CMakeLists.txt  Makefile  README.md  rpc.c
Client/: main.c  main.cpp
Server/: main.c  main.cpp
include/: run_client.h  run_server.h
service/openrc/: rpcd
src/: run_client.c  run_server.c
